--- a/Labo4/ressources/latex/refman.tex
+++ b/Labo4/ressources/latex/refman.tex
@@ -70,8 +70,8 @@
 \fancyhead[RO]{\fancyplain{}{\bfseries\thepage}}
 \fancyfoot[LE]{\fancyplain{}{}}
 \fancyfoot[CE]{\fancyplain{}{}}
-\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Mardi 19 Novembre 2019 17\-:41\-:51 pour Ordonnancement par Doxygen }}
-\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Mardi 19 Novembre 2019 17\-:41\-:51 pour Ordonnancement par Doxygen }}
+\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Généré le Vendredi 22 Novembre 2019 13\-:41\-:30 pour Ordonnancement par Doxygen }}
+\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Généré le Vendredi 22 Novembre 2019 13\-:41\-:30 pour Ordonnancement par Doxygen }}
 \fancyfoot[CO]{\fancyplain{}{}}
 \fancyfoot[RO]{\fancyplain{}{}}
 \renewcommand{\footrulewidth}{0.4pt}
@@ -123,7 +123,7 @@
 \vspace*{1cm}
 {\large Généré par Doxygen 1.8.6}\\
 \vspace*{0.5cm}
-{\small Mardi 19 Novembre 2019 17:41:51}\\
+{\small Vendredi 22 Novembre 2019 13:41:30}\\
 \end{center}
 \end{titlepage}
 \clearemptydoublepage
@@ -140,6 +140,7 @@
 \input{busycpu_8h}
 \input{general_8h}
 \input{intro__watchdog_8c}
+\input{intro__watchdog__old_8c}
 \input{watchdog_8c}
 \input{watchdog_8h}
 %--- End generated contents ---
