--- a/Labo4/ressources/latex/files.tex
+++ b/Labo4/ressources/latex/files.tex
@@ -4,6 +4,7 @@ Liste de tous les fichiers avec une brève description \-:\begin{DoxyCompactList
 \item\contentsline{section}{\hyperlink{busycpu_8h}{busycpu.\-h} }{\pageref{busycpu_8h}}{}
 \item\contentsline{section}{\hyperlink{general_8h}{general.\-h} }{\pageref{general_8h}}{}
 \item\contentsline{section}{\hyperlink{intro__watchdog_8c}{intro\-\_\-watchdog.\-c} \\*Application pour l'introduction aux concept de tâche }{\pageref{intro__watchdog_8c}}{}
+\item\contentsline{section}{\hyperlink{intro__watchdog__old_8c}{intro\-\_\-watchdog\-\_\-old.\-c} }{\pageref{intro__watchdog__old_8c}}{}
 \item\contentsline{section}{\hyperlink{watchdog_8c}{watchdog.\-c} \\*Fonctions permettant la mise en place d'un watchdog }{\pageref{watchdog_8c}}{}
 \item\contentsline{section}{\hyperlink{watchdog_8h}{watchdog.\-h} }{\pageref{watchdog_8h}}{}
 \end{DoxyCompactList}
